tests/reject/ttypelessemptyset.nim
var q = false
discard (if q: {} else: {})


